Add MySQL general tables

--- a/DB Structure.html
+++ b/DB Structure.html
@@ -674,7 +674,7 @@ Categories for financial, like Type Expense or Revenue</p>
             <td>Payment Date</td>
           </tr>
           <tr>
-            <th>PaymentConditionId</th>
+            <th>ConditionId</th>
             <td class="type">int</td>
             <td class="null">☒</td>
             <td>Foreign key to Sales.Condition.ConditionId</td>
@@ -764,7 +764,7 @@ Categories for financial, like Type Expense or Revenue</p>
             </td>
           </tr>
           <tr>
-            <th>PaymentConditionId</th>
+            <th>ConditionId</th>
             <td class="type">int</td>
             <td class="null">☒</td>
             <td>Foreign key to Sales.Condition.ConditionID</td>
@@ -862,7 +862,7 @@ Categories for financial, like Type Expense or Revenue</p>
             <td><span class="flag" title="FK_Revenue_FinancialCostCenter">⇨ <a href="#848722076">Financial.CostCenter</a>.CostCenterId</span>Foreign key to CostCenter.CostCenterId</td>
           </tr>
           <tr>
-            <th>PaymentConditionId</th>
+            <th>ConditionId</th>
             <td class="type">int</td>
             <td class="null">☒</td>
             <td><span class="flag" title="FK_Revenue_PaymentCondition">⇨ <a href="#1008722646">Sales.Condition</a>.ConditionId</span>Foreign key to Sales.Condition.ConditionID</td>
@@ -964,7 +964,7 @@ Categories for financial, like Type Expense or Revenue</p>
             </td>
           </tr>
           <tr>
-            <th>PaymentConditionId</th>
+            <th>ConditionId</th>
             <td class="type">int</td>
             <td class="null">☒</td>
             <td><span class="flag" title="FK_RevenueTrans_Condition">⇨ <a href="#1008722646">Sales.Condition</a>.ConditionId</span>Foreign key to Sales.Condition.ConditionID</td>
